--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -45,7 +45,7 @@
                 <p>I'm a Full Stack Web Developer <br>
                     And This is My Portfolio to show all Details and Project in
                     web development</p>
-                <a href="WesalMazen-CV.pdf" target="_blank">Download CV</a>
+                <a href="wesalmazen-CV1.pdf" target="_blank">Download CV</a>
 
             </div>
             <div class="images">
